--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,120 @@
 }
 
 .App-header {
-  background-color: #282c34;
+
+  background-color: #f7f7f7;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: top;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: deepgray;
+}
+
+.SearchBox {
+    text-align: right;
+    width: 100%;
+    background-color: deepgray;
+    border-radius: 1px deepgray;
+    box-sizing: border-box;
+
+}
+
+.urlInput {
+    width: 580px;
+}
+
+.url {
+    text-align: center;
+    font-size: 20px;
+    width: 100%;
+
+    margin-top: 20px;
+    margin-bottom: 50px;
+    background-color: deepgray;
+    border-radius: 1px deepgray;
+    box-sizing: border-box;
+}
+
+.tagInput {
+    width: 580px;
+}
+
+.addbutton {
+    width: 54px;
+}
+.addlist {
+    font-size:20px;
+    text-align:left;
+
+}
+
+.img {
+    align-items: center;
+    width: 1000px;
+    height: 600px;
+    object-fit: contain;
+}
+
+.previewComponent {
+    text-align: center;
+}
+
+.previewText {
+    align-items: center;
+    display: block;
+    float: left;
+    position: relative;
+    color: #484848;
+    top: 0;
+    left: 0;
+    padding: 50px;
+    margin: 20px;
+    border:5px dashed #484848;
+    font-size: 35px;
+    /*text-shadow: 5px 5px 5px #ff0000;*/
+    opacity: 1;
+}
+
+.fileInput {
+    position: right;
+    display: inline-block;
+    background: #cecece;
+    border: 1px solid #cecece;
+    border-radius: 4px;
+    padding: 1px 1px;
+    overflow: hidden;
+    color: #484848;
+    text-decoration: none;
+    text-indent: 0;
+    line-height: 15px;
+}
+
+.fileInput:hover{
+    color: #444;
+    background: #eee;
+    border-color: #ccc;
+    text-decoration: none
+}
+
+.Welcome {
+    text-align: center;
+    display: block;
+    float: left;
+    position: relative;
+    color: #484848;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 40px;
+    /*outline: #00ff00 dotted thick;*/
+    font-size: 50px;
+    /*text-shadow: 5px 5px 5px #ff0000;*/
+    background-color: #c9dec1;
+    opacity: 1;
+    cursor: pointer;
 }
 
 .App-link {
